--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -58,7 +58,7 @@
     <div class="product-elements">
         <section class="product">
             <button class="pre-btn">
-                <img src="../../static/images/previous-btn.png" alt="Previous" class="pre">
+                <img src="/images/previous-btn.png" alt="Previous" class="pre">
             </button>
             <div class="product-container">
                 <!-- Add as many product cards as needed -->
@@ -156,7 +156,7 @@
                 <!-- Repeat product-card for more images -->
             </div>
             <button class="next-btn">
-                <img src="../../static/images/next-btn.png" alt="Next" class="nxt">
+                <img src="/images/next-btn.png" alt="Next" class="nxt">
             </button>
         </section>
     </div>
@@ -325,107 +325,13 @@
         </div>
     </div>
 
-    <!-- <div class="static-image">
+    <div class="static-image">
         <a href="#">
-            <img src="../../static/images/static-img.png" alt="image" class="static-img">
+            <img src="/images/static-img.png" alt="image" class="static-img">
         </a>
 
-    </div> -->
-    <div class="customer-needs">
-        <h2>Just For You</h2>
-        <div class="container-2">
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Men</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Women</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Kids</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Daily Deals</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Western Wears</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Indian Wears</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Footwears</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Activesports</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Home Decor</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Watches</span>
-                </div>
-            </div>
-
-            <div class="cards-1">
-                <div class="wrapper-2">
-                    <img src="https://images-static.nykaa.com/uploads/c1f68994-bc6d-4fb0-9cac-d0ce47d67838.jpg?tr=w-180,cm-pad_resize"
-                        alt="">
-                    <span>Global Stores</span>
-                </div>
-            </div>
-
-        </div>
     </div>
-    </div>
-
+    
     <script>
         const nextBtn = document.querySelector('.next-btn');
         const prevBtn = document.querySelector('.pre-btn');
