--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -47,9 +47,10 @@ body {
 }
 
 .search-btn {
-    position: relative;
-    left: 120px;
-    top: 5px;
+    margin: 2px;
+    /* position: relative; */
+    /* left: 120px; */
+    /* top: 5px; */
     background-color: #ba68c8;
     border: none;
     font-size: 23px;
@@ -58,6 +59,7 @@ body {
     height: 40px;
     border-radius: 3px;
 }
+
 
 .search-btn:hover {
     cursor: pointer;
@@ -96,6 +98,7 @@ body {
     display: flex;
     position: relative;
     top: 180px;
+    width: 100%;
     justify-content: center;
     align-items: center;
     overflow: hidden;
