--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -48,11 +48,18 @@
     </div>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="/images/slide-1.webp" alt="Image 1">
-            <img src="/images/slide-2.webp" alt="Image 2">
-            <img src="/images/slide-3.webp" alt="Image 3">
-            <img src="/images/slide-4.webp" alt="Image 4">
+            <img src="/images/slide-1.webp" alt="Image 1" class="img">
         </div>
+        <div class="carousel">
+            <img src="/images/slide-2.webp" alt="Image 2" class="img">
+        </div>
+        <div class="carousel">
+            <img src="/images/slide-3.webp" alt="Image 3" class="img">
+        </div>
+        <div class="carousel">
+            <img src="/images/slide-4.webp" alt="Image 4" class="img">
+        </div>
+    </div>
     </div>
     <h2 class="product-category">Best Selling</h2>
     <div class="product-elements">
@@ -331,7 +338,7 @@
         </a>
 
     </div>
-    
+
     <script>
         const nextBtn = document.querySelector('.next-btn');
         const prevBtn = document.querySelector('.pre-btn');
