scroll bar image

--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -55,7 +55,7 @@
     <div class="carousel-container">
         <div class="carousel">
             <img src="/images/slide-1.webp" alt="Image 1">
-            <img src="/images/slide-2.webp" alt="Image 2">
+            <img src="/images/scroll-image3.jpg" alt="Image 2">
             <img src="/images/slide-3.webp" alt="Image 3">
             <img src="/images/slide-4.webp" alt="Image 4">
         </div>
