Added new images

--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -47,6 +47,8 @@ body {
 }
 
 .search-btn {
+    position:relative;
+    top:5px;
     margin: 2px;
     /* position: relative; */
     /* left: 120px; */
