--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -50,14 +50,13 @@
                 </ul>
             </nav>
         </div> -->
-        <hr>
     </div>
     <div class="carousel-container">
         <div class="carousel">
             <img src="/images/slide-1.webp" alt="Image 1" class="img">
         </div>
         <div class="carousel">
-            <img src="/images/slide-2.webp" alt="Image 2" class="img">
+            <img src="" alt="Image 2" class="img">
         </div>
         <div class="carousel">
             <img src="/images/slide-3.webp" alt="Image 3" class="img">
