--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -56,7 +56,7 @@
             <img src="/images/slide-1.webp" alt="Image 1" class="img">
         </div>
         <div class="carousel">
-            <img src="" alt="Image 2" class="img">
+            <img src="https://cdn.dribbble.com/users/388811/screenshots/8587429/media/ff053d28af2b205e5f020c4582da566e.jpg?resize=768x576&vertical=center" alt="Image-2" class="img">
         </div>
         <div class="carousel">
             <img src="/images/slide-3.webp" alt="Image 3" class="img">
