--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -37,18 +37,20 @@ body {
     border-radius: 5px;
     transition: 0.s ease;
 }
-.logo-img{
-    width:130px;
-    height:80px;
+
+.logo-img {
+    width: 130px;
+    height: 80px;
 }
+
 .navbar li a:hover {
     color: white;
     background-color: rgba(0, 0, 0, 0.1);
 }
 
 .search-btn {
-    position:relative;
-    top:5px;
+    position: relative;
+    top: 5px;
     margin: 2px;
     /* position: relative; */
     /* left: 120px; */
@@ -96,25 +98,6 @@ body {
     font-weight: bolder;
 }
 
-.product-elements {
-    display: flex;
-    position: relative;
-    width:100%;
-    top: 180px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    overflow-y: hidden;
-}
-
-.product {
-    position: relative;
-    display: flex;
-    overflow-x: hidden;
-    padding: 20px;
-}
-
 .product-category {
     display: inline-block;
     position: absolute;
@@ -129,9 +112,27 @@ body {
     text-transform: capitalize;
 }
 
+.product-elements {
+    display: flex;
+    position: relative;
+    width: 100%;
+    top: 180px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    overflow-y: hidden;
+}
+
+.product {
+    position: relative;
+    display: flex;
+    padding: 20px;
+}
+
 .product-container {
     display: flex;
-    gap:30px;
+    gap: 30px;
     overflow-x: auto;
     width: 100%;
     margin-left: 40px;
@@ -141,21 +142,10 @@ body {
 .product-container::-webkit-scrollbar {
     display: none;
 }
-
 .product-card {
-    /* flex:0 0 auto;
-    width:400px;
-    height:450px;
-    margin-right:40px;
-    flex: 0 0 auto; */
-    flex: 0 0 calc(100% / 2 - 20px);
-    /* 4 cards visible at a time with spacing */
-    max-width: calc(100% / 4 - 20px);
-    /* Same as flex-basis */
-    
-    /* Space between cards */
+    flex: 0 0 calc(100% / 2 - 20px);   /* 4 cards visible at a time with spacing */
+    max-width: calc(100% / 4 - 20px);  /* Same as flex-basis */
     background: #fff;
-    /* Optional: For better visual feedback */
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     height: 450px;
@@ -260,12 +250,12 @@ body {
 }
 
 .next-btn {
-    position:absolute;
+    position: absolute;
     right: 0;
 }
 
 .pre-btn {
-    left:0;
+    left: 0;
 }
 
 .pre-btn img,
@@ -279,7 +269,7 @@ next-btn img {
 }
 
 .carousel-container {
-    display:flex;
+    display: flex;
     position: relative;
     top: 110px;
     width: 100%;
@@ -371,7 +361,7 @@ next-btn img {
     border-radius: 5px;
     box-sizing: border-box;
     overflow: hidden;
-    transition: 0.4s ease; 
+    transition: 0.4s ease;
 }
 
 .image img {
@@ -420,8 +410,9 @@ next-btn img {
     opacity: 1;
     color: #ffffff;
 }
-.card-1:hover{
-    scale:1.1;
+
+.card-1:hover {
+    scale: 1.1;
 
 }
 
@@ -462,7 +453,7 @@ next-btn img {
 
 .static-img {
     position: absolute;
-    top:20px;
+    top: 20px;
     width: 100%;
     height: 100%;
 }
@@ -477,10 +468,8 @@ next-btn img {
 .customer-needs h2 {
     width: 200px;
 }
-.container-2{
-    background-color:#EFEFEF;
-    height:100%;
+
+.container-2 {
+    background-color: #EFEFEF;
+    height: 100%;
 }
-
-
-
