--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -56,10 +56,10 @@
             <img src="/images/slide-1.webp" alt="Image 1" class="img">
         </div>
         <div class="carousel">
-            <img src="https://cdn.dribbble.com/users/388811/screenshots/8587429/media/ff053d28af2b205e5f020c4582da566e.jpg?resize=768x576&vertical=center" alt="Image-2" class="img">
+            <img src="https://i.pinimg.com/1200x/1a/c4/75/1ac4751bc3ef35ce9daa45027e8a20b2.jpg" alt="Image-2" class="img">
         </div>
         <div class="carousel">
-            <img src="/images/slide-3.webp" alt="Image 3" class="img">
+            <img src="https://i.pinimg.com/1200x/d3/9c/d6/d39cd6ed7f4c27737736d47f4a35404f.jpg" alt="Image 3" class="img">
         </div>
         <div class="carousel">
             <img src="/images/slide-4.webp" alt="Image 4" class="img">
@@ -337,12 +337,11 @@
         </div>
     </div>
 
-    <div class="static-image">
+    <!-- <div class="static-image">
         <a href="#">
             <img src="/images/static-img.png" alt="image" class="static-img">
         </a>
-
-    </div>
+    </div> -->
 
     <script>
         const nextBtn = document.querySelector('.next-btn');
