--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -337,11 +337,25 @@
         </div>
     </div>
 
-    <!-- <div class="static-image">
+    <div class="static-image">
         <a href="#">
             <img src="/images/static-img.png" alt="image" class="static-img">
         </a>
-    </div> -->
+    </div>
+    <div class="conatiner-large-cards">
+        <div class="wrapper-large-cards">
+            <div class="cards-large">
+                <div class="images-large">
+                    <img src="" alt="large-cards" class="large-card-img">
+                    <span class="blur"></span>
+                </div>
+                <div class="info">
+                    <span class="infos">Brands</span>
+                    <span>Upto 40% Off</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script>
         const nextBtn = document.querySelector('.next-btn');
