--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -346,7 +346,7 @@
         <div class="wrapper-large-cards">
             <div class="cards-large">
                 <div class="images-large">
-                    <img src="" alt="large-cards" class="large-card-img">
+                    <img src="../../static/images/large cards-4.jpg" alt="large-cards" class="large-card-img">
                     <span class="blur"></span>
                 </div>
                 <div class="info">
