--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -342,16 +342,38 @@
             <img src="/images/static-img.png" alt="image" class="static-img">
         </a>
     </div>
-    <div class="conatiner-large-cards">
+    <div class="container-large-cards">
         <div class="wrapper-large-cards">
             <div class="cards-large">
                 <div class="images-large">
-                    <img src="../../static/images/large cards-4.jpg" alt="large-cards" class="large-card-img">
-                    <span class="blur"></span>
+                    <img src="/images/large cards7.webp" alt="large-cards" class="large-card-img">
+                    <span class="blur">Makeup</span>
                 </div>
                 <div class="info">
-                    <span class="infos">Brands</span>
-                    <span>Upto 40% Off</span>
+                    <span class="infos">Upto 40% Off</span>
+                    <span class="infos-1">on entire brand</span>
+                </div>
+            </div>
+
+            <div class="cards-large">
+                <div class="images-large">
+                    <img src="/images/large cards-4.jpg" alt="large-cards" class="large-card-img">
+                    <span class="blur">Makeup</span>
+                </div>
+                <div class="info">
+                    <span class="infos">Upto 40% Off</span>
+                    <span class="infos-1">on entire brand</span>
+                </div>
+            </div>
+
+            <div class="cards-large">
+                <div class="images-large">
+                    <img src="/images/large cards-5.webp" alt="large-cards" class="large-card-img">
+                    <span class="blur">Makeup</span>
+                </div>
+                <div class="info">
+                    <span class="infos">Upto 40% Off</span>
+                    <span class="infos-1">on entire brand</span>
                 </div>
             </div>
         </div>
