--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -473,3 +473,68 @@ next-btn img {
     background-color: #EFEFEF;
     height: 100%;
 }
+.container-large-cards{
+    display:flex;
+    top:300px;
+    position:relative;
+    height:100%;
+    width:100%;
+    background-color:#EFEFEF;
+}
+.wrapper-large-cards{
+    display:flex;
+    position:relative;
+    padding:60px;
+    width:100%;
+    height:100%;
+    gap:calc(100%/10 - 20px)
+    
+}
+.cards-large{
+    display:flex;
+    position:relative;
+    height:550px;
+    width:400px;
+    
+}
+.large-card-img{
+    display: flex;
+    position:absolute;
+    width:100%;
+    height:100%;
+    border-radius: 20px;
+}
+.blur{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    top:70%;
+    text-transform: capitalize;
+    font-size:40px;
+    color:#500725;
+    letter-spacing: 7px;
+    font-weight: bolder;
+    position:absolute;
+    border-radius:25px 25px 0 0;
+    height:165px;
+    width:100%;
+    background-color:rgba(255, 255, 255, 0.538);
+}
+.info{
+    align-items: center;
+    position:absolute;
+    top:100%;
+}
+.infos{
+    margin-left:30px;
+    display:block;
+    text-transform: capitalize;
+    font-size:34px;
+    font-weight: bolder;
+}
+.infos-1{
+    margin-left:100px;
+    display:block;
+    font-size:30px;
+    font-weight: bolder;
+}
