--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -142,9 +142,12 @@ body {
 .product-container::-webkit-scrollbar {
     display: none;
 }
+
 .product-card {
-    flex: 0 0 calc(100% / 2 - 20px);   /* 4 cards visible at a time with spacing */
-    max-width: calc(100% / 4 - 20px);  /* Same as flex-basis */
+    flex: 0 0 calc(100% / 2 - 20px);
+    /* 4 cards visible at a time with spacing */
+    max-width: calc(100% / 4 - 20px);
+    /* Same as flex-basis */
     background: #fff;
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -473,68 +476,205 @@ next-btn img {
     background-color: #EFEFEF;
     height: 100%;
 }
-.container-large-cards{
-    display:flex;
-    top:300px;
-    position:relative;
-    height:100%;
-    width:100%;
-    background-color:#EFEFEF;
-}
-.wrapper-large-cards{
-    display:flex;
-    position:relative;
-    padding:60px;
-    width:100%;
-    height:100%;
-    gap:calc(100%/10 - 20px)
-    
-}
-.cards-large{
-    display:flex;
-    position:relative;
-    height:550px;
-    width:400px;
-    
-}
-.large-card-img{
+
+.container-large-cards {
     display: flex;
-    position:absolute;
-    width:100%;
-    height:100%;
+    top: 300px;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background-color: #EFEFEF;
+}
+
+.wrapper-large-cards {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding: 60px;
+    width: 100%;
+    height: 100%;
+    gap:70px;
+}
+
+.cards-large {
+    display: flex;
+    position: relative;
+    height: 550px;
+    width: 400px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.3);
+    transition:0.5s ease;
+}
+
+.cards-large:hover {
+    scale:1.03;
+    cursor:pointer;
+}
+
+.large-card-img {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
 }
-.blur{
-    display:flex;
+
+.blur {
+    display: flex;
     justify-content: center;
     align-items: center;
-    top:70%;
+    top: 70%;
     text-transform: capitalize;
-    font-size:40px;
-    color:#500725;
+    font-size: 40px;
+    color: #500725;
     letter-spacing: 7px;
     font-weight: bolder;
-    position:absolute;
-    border-radius:25px 25px 0 0;
-    height:165px;
-    width:100%;
-    background-color:rgba(255, 255, 255, 0.538);
+    position: absolute;
+    border-radius: 25px 25px 20px 20px;
+    height: 165px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.538);
 }
-.info{
+
+.info {
     align-items: center;
-    position:absolute;
-    top:100%;
+    position: absolute;
+    top: 100%;
 }
-.infos{
-    margin-left:30px;
-    display:block;
+
+.infos {
+    margin-left: 30px;
+    display: block;
     text-transform: capitalize;
-    font-size:34px;
+    font-size: 34px;
     font-weight: bolder;
 }
-.infos-1{
-    margin-left:100px;
-    display:block;
-    font-size:30px;
+
+.infos-1 {
+    margin-left: 100px;
+    display: block;
+    font-size: 30px;
     font-weight: bolder;
+}
+
+.footer{
+    top:400px;
+    position:relative;
+    background-color:#EFEFEF;
+    height:700px;
+    width:100%;
+}
+.first-bar{
+    font-size:15px;
+    font-weight:300;
+    padding:10px;
+    position:absolute;
+    background-color: #333333;
+    height:80px;
+    width:100%;
+    color:#EFEFEF;
+}
+#content-1{
+    left:20px;
+    top:10px;
+    position:absolute;
+}
+#content-2{
+    top:10px;
+    position:absolute;
+    margin-left:500px;
+}
+#content-3{
+    position:relative;
+    margin-left:500px;
+}
+.span-footer{
+    display:block;
+    margin-top:5px;
+    cursor: pointer;
+}
+
+.second-bar{
+    display:flex;
+    flex-wrap: wrap;
+    position:absolute;
+    top:100px;
+    background-color:#827a7a38;
+    width:100%;
+    height:200px;
+    color:#000000;
+    font-weight: 400;
+    font-size:17px;
+    letter-spacing: 3px;
+}
+.about-us{
+    letter-spacing: 2px;
+    padding:10px;
+    margin-left:80px;
+}
+.help{
+    padding:10px;
+    margin-left:80px;
+}
+.policy{
+    padding:10px;
+    margin-left:80px;
+}
+.quick-links{
+    padding:10px;
+    margin-left:80px;
+}
+.third-bar{
+    padding:10px;
+    display:flex;
+    width:100%;
+    background-color:rgb(250, 247, 247);
+    flex-wrap: wrap;
+    position:absolute;
+    top:300px;
+}
+.third-bar span{
+    color:rgb(142, 138, 138);
+    margin-top:5px;
+    font-size:17px;
+    font-weight:300;
+}
+.woman{
+    margin-left:20px;
+}
+.men{
+    margin-left:90px;
+}
+.kids{
+    margin-left:90px;
+}
+.footer-brands{
+    margin-left:90px;
+}
+.skin-care{
+    margin-left:90px;
+}
+.hair-care{
+    margin-left:80px;
+}
+.fashin-endbar{
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    color:#ffffff;
+    top:100px;
+    position:relative;
+    width:100%;
+    height:60px;
+    background-color:#FD7685;
+    font-size:16px;
+    letter-spacing: 2px;
+}
+.first-bar a{
+    top:35px;
+    position:relative;
+    font-size: 24px;
+    margin: 10px;
+    color:#ffffff;
+    text-decoration: none;
 }
