--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -491,13 +491,14 @@ next-btn img {
     justify-content: center;
     position: relative;
     padding: 60px;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     gap:70px;
 }
 
 .cards-large {
     display: flex;
+    flex:0 0 (100/3 - 20px);
     position: relative;
     height: 550px;
     width: 400px;
