--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -348,6 +348,7 @@
         <a href="#">
             <img src="/images/static-img.png" alt="image" class="static-img">
         </a>
+        <span></span>
     </div>
     <div class="container-large-cards">
         <div class="wrapper-large-cards">
