--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -17,7 +17,7 @@ body {
     top: 0;
     justify-content: space-between;
     align-items: center;
-    background-color: #ba68c8;
+    background-color: #67308D;
     height: 100px;
     width: 100%;
 }
@@ -35,7 +35,22 @@ body {
     font-size: 18px;
     font-weight: bolder;
     border-radius: 5px;
-    transition: 0.s ease;
+}
+
+.lists {
+    transition: 0.2s ease;
+}
+
+.lists:hover {
+    scale: 1.1;
+}
+
+.lists-1 {
+    transition: 0.2s ease;
+}
+
+.lists-1:hover {
+    scale: 1.1;
 }
 
 .logo-img {
@@ -55,19 +70,20 @@ body {
     /* position: relative; */
     /* left: 120px; */
     /* top: 5px; */
-    background-color: #ba68c8;
+    background-color: #901bb7;
     border: none;
     font-size: 23px;
     color: #ffffff;
-    width: 50px;
+    width: 110px;
     height: 40px;
-    border-radius: 3px;
+    border-radius: 15px;
+    transition: 0.3s ease;
 }
-
 
 .search-btn:hover {
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #221737;
+    scale: 1.1;
 }
 
 ::placeholder {
@@ -493,23 +509,23 @@ next-btn img {
     padding: 60px;
     width: 100vw;
     height: 100%;
-    gap:70px;
+    gap: 70px;
 }
 
 .cards-large {
     display: flex;
-    flex:0 0 (100/3 - 20px);
+    flex: 0 0 (100/3 - 20px);
     position: relative;
     height: 550px;
     width: 400px;
     border-radius: 20px;
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.3);
-    transition:0.5s ease;
+    transition: 0.5s ease;
 }
 
 .cards-large:hover {
-    scale:1.03;
-    cursor:pointer;
+    scale: 1.03;
+    cursor: pointer;
 }
 
 .large-card-img {
@@ -558,122 +574,141 @@ next-btn img {
     font-weight: bolder;
 }
 
-.footer{
-    top:400px;
-    position:relative;
-    background-color:#EFEFEF;
-    height:700px;
-    width:100%;
+.footer {
+    top: 400px;
+    position: relative;
+    background-color: #EFEFEF;
+    height: 700px;
+    width: 100%;
 }
-.first-bar{
-    font-size:15px;
-    font-weight:300;
-    position:absolute;
-    background-color: #333333;
-    height:80px;
-    width:100%;
-    color:#EFEFEF;
+
+.first-bar {
+    font-size: 15px;
+    font-weight: 300;
+    position: absolute;
+    background-color: #1C1948;
+    height: 80px;
+    width: 100%;
+    color: #EFEFEF;
 }
-#content-1{
-    left:20px;
-    top:10px;
-    position:absolute;
+
+#content-1 {
+    left: 20px;
+    top: 10px;
+    position: absolute;
 }
-#content-2{
-    top:10px;
-    position:absolute;
-    margin-left:500px;
+
+#content-2 {
+    top: 10px;
+    position: absolute;
+    margin-left: 500px;
 }
-#content-3{
-    position:relative;
-    margin-left:500px;
+
+#content-3 {
+    position: relative;
+    margin-left: 500px;
 }
-.span-footer{
-    display:block;
-    margin-top:5px;
+
+.span-footer {
+    display: block;
+    margin-top: 5px;
     cursor: pointer;
 }
 
-.second-bar{
-    display:flex;
+.second-bar {
+    display: flex;
     flex-wrap: wrap;
-    position:absolute;
-    top:100px;
-    background-color:#827a7a38;
-    width:100%;
-    height:200px;
-    color:#000000;
+    position: absolute;
+    top: 100px;
+    background-color: #827a7a38;
+    width: 100%;
+    height: 200px;
+    color: #000000;
     font-weight: 400;
-    font-size:17px;
+    font-size: 17px;
     letter-spacing: 3px;
 }
-.about-us{
+
+.about-us {
     letter-spacing: 2px;
-    padding:10px;
-    margin-left:80px;
+    padding: 10px;
+    margin-left: 80px;
 }
-.help{
-    padding:10px;
-    margin-left:80px;
+
+.help {
+    padding: 10px;
+    margin-left: 80px;
 }
-.policy{
-    padding:10px;
-    margin-left:80px;
+
+.policy {
+    padding: 10px;
+    margin-left: 80px;
 }
-.quick-links{
-    padding:10px;
-    margin-left:80px;
+
+.quick-links {
+    padding: 10px;
+    margin-left: 80px;
 }
-.third-bar{
-    display:flex;
-    width:100%;
-    background-color:rgb(250, 247, 247);
+
+.third-bar {
+    display: flex;
+    width: 100%;
+    background-color: rgb(250, 247, 247);
     flex-wrap: wrap;
-    position:absolute;
-    top:300px;
+    position: absolute;
+    top: 300px;
 }
-.third-bar span{
-    color:rgb(142, 138, 138);
-    margin-top:5px;
-    font-size:17px;
-    font-weight:300;
+
+.third-bar span {
+    color: rgb(142, 138, 138);
+    margin-top: 5px;
+    font-size: 17px;
+    font-weight: 300;
 }
-.woman{
-    margin-left:20px;
+
+.woman {
+    margin-left: 20px;
 }
-.men{
-    margin-left:90px;
+
+.men {
+    margin-left: 90px;
 }
-.kids{
-    margin-left:90px;
+
+.kids {
+    margin-left: 90px;
 }
-.footer-brands{
-    margin-left:90px;
+
+.footer-brands {
+    margin-left: 90px;
 }
-.skin-care{
-    margin-left:90px;
+
+.skin-care {
+    margin-left: 90px;
 }
-.hair-care{
-    margin-left:80px;
+
+.hair-care {
+    margin-left: 80px;
 }
-.fashin-endbar{
-    display:flex;
+
+.fashin-endbar {
+    display: flex;
     justify-content: center;
-    align-items:center;
-    color:#ffffff;
-    top:100px;
-    position:relative;
-    width:100%;
-    height:60px;
-    background-color:#FD7685;
-    font-size:16px;
+    align-items: center;
+    color: #ffffff;
+    top: 100px;
+    position: relative;
+    width: 100%;
+    height: 60px;
+    background-color:#67308D;
+    font-size: 16px;
     letter-spacing: 2px;
 }
-.first-bar a{
-    top:35px;
-    position:relative;
+
+.first-bar a {
+    top: 35px;
+    position: relative;
     font-size: 24px;
     margin: 10px;
-    color:#ffffff;
+    color: #ffffff;
     text-decoration: none;
 }
