--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fash-inn</title>
-    <link rel="stylesheet" href="/style/customer.home.css">
+    <link rel="stylesheet" href="../../static/style/customer.home.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
     <div class="nav-content">
         <div class="navbar">
             <div class="logo">
-                <a href="#"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
+                <a href="#"><img src="../../static/images/logo.png" alt="logo" class="logo-img"></a>
             </div>
             <ul class="unordered">
                 <li class="lists" id="drop-1"><a class="nav-content" href="#">Woman</a></li>
@@ -58,7 +58,7 @@
     </div>
     <div class="carousel-container">
         <div class="carousel">
-            <img src="/images/slide-1.webp" alt="Image 1" class="img">
+            <img src="../../static/images/slide-1.webp" alt="Image 1" class="img">
         </div>
         <div class="carousel">
             <img src="https://i.pinimg.com/1200x/1a/c4/75/1ac4751bc3ef35ce9daa45027e8a20b2.jpg" alt="Image-2"
@@ -69,7 +69,7 @@
                 class="img">
         </div>
         <div class="carousel">
-            <img src="/images/slide-4.webp" alt="Image 4" class="img">
+            <img src="../../static/images/slide-4.webp" alt="Image 4" class="img">
         </div>
     </div>
     </div>
@@ -77,7 +77,7 @@
     <div class="product-elements">
         <section class="product">
             <button class="pre-btn">
-                <img src="/images/previous-btn.png" alt="Previous" class="pre">
+                <img src="../../static/images/previous-btn.png" alt="Previous" class="pre">
             </button>
             <div class="product-container">
                 <!-- Add as many product cards as needed -->
@@ -175,7 +175,7 @@
                 <!-- Repeat product-card for more images -->
             </div>
             <button class="next-btn">
-                <img src="/images/next-btn.png" alt="Next" class="nxt">
+                <img src="../../static/images/next-btn.png" alt="Next" class="nxt">
             </button>
         </section>
     </div>
@@ -346,7 +346,7 @@
 
     <div class="static-image">
         <a href="#">
-            <img src="/images/static-img.png" alt="image" class="static-img">
+            <img src="../../static/images/static-img.png" alt="image" class="static-img">
         </a>
         <span></span>
     </div>
@@ -354,7 +354,7 @@
         <div class="wrapper-large-cards">
             <div class="cards-large">
                 <div class="images-large">
-                    <img src=" /images/large cards-4.jpg" alt="large-cards" class="large-card-img">
+                    <img src="../../static/images/large cards-4.jpg" alt="large-cards" class="large-card-img">
                     <span class="blur">Makeup</span>
                 </div>
                 <div class="info">
@@ -365,7 +365,7 @@
 
             <div class="cards-large">
                 <div class="images-large">
-                    <img src="/images/large cards-5.webp" alt="large-cards" class="large-card-img">
+                    <img src="../../static/images/large cards-5.webp" alt="large-cards" class="large-card-img">
                     <span class="blur">fragrance</span>
                 </div>
                 <div class="info">
@@ -376,7 +376,7 @@
 
             <div class="cards-large">
                 <div class="images-large">
-                    <img src="/images/large cards7.png" alt="large-cards" class="large-card-img">
+                    <img src="../../static/images/large cards7.png" alt="large-cards" class="large-card-img">
                     <span class="blur">Hair Care</span>
                 </div>
                 <div class="info">
