--- a/src/main/resources/static/style/sign-up.css
+++ b/src/main/resources/static/style/sign-up.css
@@ -1,8 +1,3 @@
-*{
-    margin:0;
-    padding:0;
-}
-
 body {
     display: flex;
     justify-content: center;
@@ -19,87 +14,61 @@ body {
     font-family: sans-serif;
   }
 
-  .navbar{
-    margin:0;
-    padding:0;
+.container{
     position:absolute;
-    top:0;
-    width:100%;
-    height:11%;
-  }
-  
-  .nav{
-    display:flex;
-    width:100%;
-    justify-content:space-between;
-  }
-
-  .logo-img{
-    position:relative;
-    top:0.8rem;
-    left:2rem;
-    width:8rem;
-    height:4rem;
-  }
-
-  .redirect-signUp{
-    display:inline-block;
-    position:relative;
-    top:1.4rem;
-    right:2.2rem;
-    height:1.0rem;
-    width:4.2rem;
-    padding:1rem;
-    font-size:18px;
-    font-weight:300;
-    text-decoration: none;
-    color:#ffffff;
-    background-color:#9548cd;
-    border-radius:5px;
-  }
-
-  .container{
-    position:relative;
-    bottom:1%;
-  }
-.contain{
-  width:100%;
+    top:100px;
+    left:50px;
 }
 
-  .slogan{
-    color:#ffffff;
-    font-size:60px;
-    letter-spacing:5px;
-  }
-  .otp-paragraph{
-    position:relative;
-    top:20px;
-    left:2%;
-    color:#ffffff;
+  .contained{
+    margin-bottom: 50px;
   }
 
-  .input-number{
+  .input-box{
     position:relative;
-    top:30px;
-    padding-left:10px;
-    width:30rem;
-    height:3rem;
-    border-radius:5px;
+    width:50rem;
+    height:1rem;
+    background:transparent;
+    border: none; /* Remove default border */
+    border-bottom: 2px solid #ccc; /* Add underline */
+    font-size: 16px; /* Adjust text size */
+    outline: none;
   }
 
-  .otp-btn{
-    position:relative;
-    top:30px;
-    width:10rem;
-    height:3rem;
-    background-color: #9548cd;
-    border-radius:5px;
-    color:#ffffff;
-    font-size:16px;
-    cursor: pointer;
+  .input-box:focus {
+    border-bottom: 3px solid #9548cd; /* Change underline color on focus */
   }
 
   ::placeholder{
-    font-size:16px;
-    letter-spacing:1px;
+    color:#ffffff;
+  }
+
+  input[type="date"] {
+    color: #ffffff;
+  }
+
+  #ph-number{
+    width:300px;
+    margin-left:5%;
+  }
+
+  #profile-img{
+    width:50rem;
+    height:3rem;
+    background:transparent;
+    padding:10px;
+    border: none; /* Remove default border */
+    font-size: 16px; /* Adjust text size */
+    outline: none;
+  }
+
+  #input-dob{
+    width:300px;
+    height:3rem;
+    background:transparent;
+    padding:10px;
+    border: none; /* Remove default border */
+    border-bottom: 2px solid #ccc; /* Add underline */
+    font-size: 16px; /* Adjust text size */
+    outline: none;
   }
