--- a/src/main/resources/templates/customer/otp-login.html
+++ b/src/main/resources/templates/customer/otp-login.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enter OTP</title>
-    <link rel="stylesheet" href="/src/main/resources/static/style/sign-up.css">
+    <link rel="stylesheet" href="/style/otp-login.css">
 </head>
 
 <body>
     <navbar class="navbar">
         <div class="nav">
-            <a href="../customer/home.html"><img class="logo-img" alt="logo" src="../../static/images/logo.png"></a>
-            <a href="../../templates/customer/sign-in.html" class="redirect-signUp">Sign-in</a>
+            <a href="http://localhost:1211/customer/home"><img class="logo-img" alt="logo" src="/images/logo.png"></a>
+            <a href="http://localhost:1211/customer/sign-in" class="redirect-signin">Sign-in</a>
         </div>
     </navbar>
     <div class="container">
