--- a/src/main/resources/templates/customer/sign-in.html
+++ b/src/main/resources/templates/customer/sign-in.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-In</title>
-    <link rel="stylesheet" href="/src/main/resources/static/style/sign-in.css">
+    <link rel="stylesheet" href="/style/sign-in.css">
 </head>
 
 <body>
     <nav class="nav-container">
     </nav>
     <div class="logo">
-        <a href="../customer/home.html"><img src="/src/main/resources/static/images/logo.png" alt="logo" class="logo-img"></a>
+        <a href="http://localhost:1211/customer/home"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
     </div>
     <form>
         <div class="container">
             <h1 class="header">Sign In</h1>
             <input placeholder="Email or mobile number" type="email" class="input" id="email-input">
             <input placeholder="Password" type="password" class="input" id="password-input">
-            <a href="../customer/home.html" class="anchor-redirect-btn" id="signIn-btn">Sign In</a>
+            <a href="http://localhost:1211/customer/home" class="anchor-redirect-btn" id="signIn-btn">Sign In</a>
             <p class="OR">OR</p>
-            <a href="../customer/otp-login.html" class="anchor-redirect-btn" id="otp-btn">Sign-In with OTP</a>
+            <a href="http://localhost:1211/customer/otp-login" class="anchor-redirect-btn" id="otp-btn">Sign-In with OTP</a>
             <a href="#" id="password-reset">Forgot Password?</a>
             <div class="div-label">
                 <label><input type="checkbox" class="checkbox">Remember me</label>
