--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -17,12 +17,12 @@
                 <a href="#"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
             </div>
             <ul class="unordered">
-                <li class="lists" id="drop-1"><a class="nav-content" href="#">Woman</a></li>
-                <li class="lists"><a class="nav-content" href="#">Men</a></li>
-                <li class="lists"><a class="nav-content" href="#">Kids</a></li>
-                <li class="lists"><a class="nav-content" href="#">Skincare</a></li>
-                <li class="lists"><a class="nav-content" href="#">Hair</a></li>
-                <li class="lists"><a class="nav-content" href="#">Fragrance</a></li>
+                <li class="lists" id="drop-1"><a class="nav-content" href="http://localhost:1211/customer/plp">Woman</a></li>
+                <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Men</a></li>
+                <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Kids</a></li>
+                <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Skincare</a></li>
+                <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Hair</a></li>
+                <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Fragrance</a></li>
                 <li><button class="search-btn"><i class="fas fa-search icon"></i></button></li>
                 <li class="lists-1"><a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px"
@@ -32,7 +32,7 @@
                         </svg>
                         Account</a></li>
                 <li class="lists-1"><a href="#"> &#9825 Wishlists</a></li>
-                <li class="lists-1"><a href="#">&#x1F6D2 Cart</a></li>
+                <li class="lists-1"><a href="http://localhost:1211/customer/cart">&#x1F6D2 Cart</a></li>
             </ul>
             <!-- <button class="search-btn"><i class="fas fa-search icon"></i></button>
             <ul class="navbar-2">
