--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -18,23 +18,23 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #67308D;
-    height: 100px;
+    height:6.25rem;
     width: 100%;
 }
 
 .navbar ul li {
     display: inline-block;
-    margin-left: 30px;
-    right: 200px;
+    margin-left:1.87rem;
+    right:12.5;
 }
 
 .navbar li a {
     color: #EFEFEF;
     text-decoration: none;
-    padding: 10px;
-    font-size: 18px;
+    padding:0.62rem;
+    font-size:1.12rem;
     font-weight: bolder;
-    border-radius: 5px;
+    border-radius:0.312rem;
 }
 
 .lists {
@@ -54,8 +54,8 @@ body {
 }
 
 .logo-img {
-    width: 130px;
-    height: 80px;
+    width: 8.12rem;
+    height:5rem;
 }
 
 .navbar li a:hover {
