--- a/src/main/resources/templates/customer/sign-up.html
+++ b/src/main/resources/templates/customer/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../static/style/sign-up.css">
+    <link rel="stylesheet" href="/style/sign-up.css">
 </head>
 <body>
     <div class="container">
