--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -359,7 +359,7 @@ next-btn img {
 
 .brands-heading {
     display: inline-block;
-    width: 400px;
+    width: 25rem;
     padding: 0 4vw;
     height: 20px;
     margin: 0;
