html and css properties changes

--- a/src/main/resources/templates/customer/sign-up.html
+++ b/src/main/resources/templates/customer/sign-up.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style/sign-up.css">
 </head>
 <body>
-    <div class="container">
+    <div class="form">
         <h2 class="heading-1">Signup</h2>
         <form>
             <div class="form-group">
