--- a/src/main/resources/static/style/customer.home.css
+++ b/src/main/resources/static/style/customer.home.css
@@ -302,7 +302,7 @@ next-btn img {
 
 .carousel img {
     width: 100vw;
-    height: 500px;
+    height: 31.2rem;
 }
 
 @keyframes slideImages {
@@ -345,8 +345,8 @@ next-btn img {
     position: relative;
     background-color: #ffffff;
     width: 100%;
-    height: 900px;
-    top: 250px;
+    height: 56.2rem;
+    top: 15.6rem;
     margin: 0;
     padding: 0px;
 }
@@ -374,8 +374,8 @@ next-btn img {
     position: relative;
     background-color: #ffffff;
     left: 40px;
-    width: 240px;
-    height: 380px;
+    width:15rem;
+    height: 23.7rem;
     margin: 0 0 20px 20px;
     border-radius: 5px;
     box-sizing: border-box;
