--- a/src/main/resources/static/style/sign-up.css
+++ b/src/main/resources/static/style/sign-up.css
@@ -49,9 +49,9 @@ input:focus{
   color:black;
 }
 
-.container {
+.form {
   width: 20%;
-  background-color:rgba(0, 0, 0, 0.6);
+  background-color:rgba(0, 0, 0, 0.7);
   border-radius: 5%;
   padding:3% 5%;
   text-align: center;
@@ -74,14 +74,14 @@ input:focus{
 }
 .btn {
   width: 70%;
-  padding: 4% 0%;
+  padding: 4.5% 0%;
   background-color:#9548cd;
   color: white;
   border: none;
-  border-radius: 5%;
+  border-radius: 10px;
   cursor: pointer;
   margin-top:4%;
 }
 .btn:hover {
-  background-color: #218838;
+  background-color:#4b1c6d ;
 }
