--- a/src/main/resources/templates/customer/home.html
+++ b/src/main/resources/templates/customer/home.html
@@ -17,14 +17,15 @@
                 <a href="#"><img src="/images/logo.png" alt="logo" class="logo-img"></a>
             </div>
             <ul class="unordered">
-                <li class="lists" id="drop-1"><a class="nav-content" href="http://localhost:1211/customer/plp">Woman</a></li>
+                <li class="lists" id="drop-1"><a class="nav-content" href="http://localhost:1211/customer/plp">Woman</a>
+                </li>
                 <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Men</a></li>
                 <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Kids</a></li>
                 <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Skincare</a></li>
                 <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Hair</a></li>
                 <li class="lists"><a class="nav-content" href="http://localhost:1211/customer/plp">Fragrance</a></li>
                 <li><button class="search-btn"><i class="fas fa-search icon"></i></button></li>
-                <li class="lists-1"><a href="#">
+                <li class="lists-1"><a href="/customer/sign-in">
                         <svg xmlns="http://www.w3.org/2000/svg" height="15px" viewBox="0 -960 960 960" width="15px"
                             fill="#FFFFFF">
                             <path
@@ -190,11 +191,9 @@
                                 src="https://images-static.nykaa.com/uploads/872c74cd-57b7-42e3-bcd1-473bd22329ba.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -206,11 +205,9 @@
                                 src="https://images-static.nykaa.com/uploads/e53da35f-45f8-4bbf-bf07-d7bbab193c3c.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -222,11 +219,9 @@
                                 src="https://images-static.nykaa.com/uploads/3f114b5f-13cd-438f-9931-138a12b7fd4f.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -238,11 +233,9 @@
                                 src="https://images-static.nykaa.com/uploads/95126df6-b360-476a-b63b-c0ed74c6d6b3.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -254,11 +247,9 @@
                                 src="https://images-static.nykaa.com/uploads/dfc27d41-6e25-4de7-b3d6-d9a1a9eef168.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -270,11 +261,9 @@
                                 src="https://images-static.nykaa.com/uploads/431d9325-ad4e-4145-8b89-00a70b2785a4.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -286,11 +275,9 @@
                                 src="https://images-static.nykaa.com/uploads/8139734a-fb9b-40e0-a3a5-270586a7186d.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -302,11 +289,9 @@
                                 src="https://images-static.nykaa.com/uploads/4ee71bd4-d592-4667-8a93-821f1bc21e0c.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -318,11 +303,9 @@
                                 src="https://images-static.nykaa.com/uploads/d5d2453f-16b5-4e32-9fa4-1105e3d246ab.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
 
@@ -334,11 +317,9 @@
                                 src="https://images-static.nykaa.com/uploads/a7a3309d-e433-4e2f-847b-63351fe6d9e7.jpg?tr=w-360,cm-pad_resize"
                                 class="brand-img" alt="brands"></a>
                         <button class="brand-btn">Visit >></button>
+                        <h2>Shop now</h2>
+                        <span>Style your ways about the product</span>
                     </div>
-                </div>
-                <div class="details">
-                    <h2>Shop now</h2>
-                    <span>Style your ways about the product</span>
                 </div>
             </div>
         </div>
