--- a/src/main/resources/templates/customer/sign-in.html
+++ b/src/main/resources/templates/customer/sign-in.html
@@ -28,7 +28,7 @@
             </div>
             <div class="sign-up">
                 <P class="New-to-paragraph">New to Fash-in?</P>
-                <a href="#" id="signup">Sign up now</a>
+                <a href="/customer/sign-up" id="signup">Sign up now</a>
             </div>
         </div>
     </form>
