--- a/src/main/resources/templates/customer/sign-up.html
+++ b/src/main/resources/templates/customer/sign-up.html
@@ -9,18 +9,18 @@
 <body>
     <div class="form">
         <h2 class="heading-1">Signup</h2>
-        <form>
+        <form method="post" action="/customer/sign-up">
             <div class="form-group">
                 <label for="full-name">Full Name</label>
-                <input type="text" id="full-name" name="full-name" required>
+                <input type="text" id="full-name" name="userName" required>
             </div>
             <div class="form-group">
                 <label for="email">Email ID</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="userEmail" required>
             </div>
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required>
+                <input type="tel" id="phone" name="userPhone" required>
             </div>
             <div class="form-group">
                 <label for="gender">Gender</label>
@@ -33,12 +33,12 @@
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="userPassword" required>
             </div>
 
             <div class="form-group">
                 <label for="password">Confirm Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="cpassword" required>
             </div>
             <button type="submit" class="btn">Sign Up</button>
         </form>
